--- a/CrearOtro-Regitro-Con-Detalle.csproj
+++ b/CrearOtro-Regitro-Con-Detalle.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
+	  <StartWorkingDirectory>$(MSBuildProjectDirectory)</StartWorkingDirectory>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>CrearOtro_Regitro_Con_Detalle</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
