--- a/CrearOtro-Regitro-Con-Detalle.csproj
+++ b/CrearOtro-Regitro-Con-Detalle.csproj
@@ -21,4 +21,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DATA\GestionUsuario.Db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
